finally ready for PR

--- a/notebooks/psf_demo.ipynb
+++ b/notebooks/psf_demo.ipynb
@@ -2,17 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -36,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -47,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -61,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -69,7 +63,7 @@
     {
      "output_type": "stream",
      "name": "stderr",
-     "text": "100%|██████████| 900/900 [02:02<00:00,  7.32it/s]\n"
+     "text": "100%|██████████| 900/900 [03:24<00:00,  4.41it/s]\n"
     }
    ],
    "source": [
@@ -222,9 +216,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit ('ots': conda)",
+   "display_name": "Python 3.8.5 64-bit ('eleanorupgrade': conda)",
    "language": "python",
-   "name": "python37964bitotscondacc917be295874127bfdb41d5623e459a"
+   "name": "python_defaultSpec_1600766539635"
   },
   "language_info": {
    "codemirror_mode": {
@@ -236,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
