--- a/docs/getting_started/tutorial.ipynb
+++ b/docs/getting_started/tutorial.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Updating eleanor"
+    "#### 1.1 Updating eleanor"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Fast Light Curves"
+    "#### 1.2 Fast Light Curves"
    ]
   },
   {
@@ -489,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 Stars Observed in Multiple Sectors"
+    "#### 1.3 Stars Observed in Multiple Sectors"
    ]
   },
   {
@@ -632,7 +632,7 @@
     "hide_input": true
    },
    "source": [
-    "### 1.4 Good practices"
+    "#### 1.4 Good practices"
    ]
   },
   {
