roll back separation of fitting in targetdata

--- a/notebooks/psf_demo.ipynb
+++ b/notebooks/psf_demo.ipynb
@@ -133,7 +133,7 @@
    "source": [
     "data = eleanor.TargetData(star, height=15, width=15, do_pca=True, do_psf=False)\n",
     "data.psf_lightcurve(data_arr = sc.flux[sq][start:end], err_arr = sc.flux_err[sq][start:end], \n",
-    "                        bkg_arr=sc.flux_bkg[sq,0,0][start:end], model_name=\"MultiGaussian\", verbose=True, nstars=3, xc=[4.9, 4.5, 4.7], yc=[3.0, 4.4, 7.0], ignore_pixels=1, likelihood=\"gaussian\")"
+    "                        bkg_arr=sc.flux_bkg[sq,0,0][start:end], model_name=\"Gaussian\", verbose=True, nstars=3, xc=[4.9, 4.5, 4.7], yc=[3.0, 4.4, 7.0], ignore_pixels=1, likelihood=\"gaussian\")"
    ]
   },
   {
