save new psf notebook

--- a/notebooks/new_psf.ipynb
+++ b/notebooks/new_psf.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -20,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +182,12 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3.8.5 64-bit ('eleanorupgrade': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "5b384fb4127f3d3e84a7c3d015195dec261eefdb890ecc7199e214b3fded6dc7"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
